use 2005-08-31  Eric Seidel  <eseidel@apple.com>

        Reviewed by vicki.

        * WebCore.xcodeproj/project.pbxproj: added EventNames.*
        * kdom/css/impl/Font.h: Fixed includes.
        Build fixes necessary after recent WebCore changes.
        http://bugzilla.opendarwin.org/show_bug.cgi?id=4780

2005-08-31  Geoffrey Garen  <ggaren@apple.com>

        -rolled in layout test for http://bugzilla.opendarwin.org/show_bug.cgi?id=4698
        kjs does not allow named functions in function expressions
        
        Test cases added:

        * layout-tests/fast/js/named-function-expression-expected.txt: Added.
        * layout-tests/fast/js/named-function-expression.html: Added.

2005-08-31  Darin Adler  <darin@apple.com>

        Reviewed by Maciej.

        - fixed http://bugzilla.opendarwin.org/show_bug.cgi?id=4766
          many callers of removeChild are leaking the removed node

        * khtml/html/html_elementimpl.cpp:
        (HTMLElementImpl::setOuterText): Added ref/deref around removeChild call.
        * khtml/html/html_formimpl.cpp:
        (DOM::HTMLSelectElementImpl::remove): Ditto.
        (DOM::HTMLTextAreaElementImpl::setDefaultValue): Ditto.
        * khtml/html/html_tableimpl.cpp:
        (DOM::HTMLTableElementImpl::deleteTHead): Ditto.
        (DOM::HTMLTableElementImpl::deleteTFoot): Ditto.
        (DOM::HTMLTableElementImpl::deleteCaption): Ditto.
        (DOM::HTMLTableSectionElementImpl::deleteRow): Ditto.
        (DOM::HTMLTableRowElementImpl::deleteCell): Ditto.
        * khtml/xml/dom2_rangeimpl.cpp:
        (DOM::RangeImpl::processContents): Ditto.
        (DOM::RangeImpl::surroundContents): Ditto.

2005-08-31  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Anders.

	http://bugzilla.opendarwin.org/show_bug.cgi?id=4768
        (Add counters for NodeImpl, ElementImpl and RenderObject in debug builds)
	
	Test cases added: None, this just adds debug output (which shows up on the regular layout tests).
